# lingmo-sddm-theme

./: CMakeLists.txt  FishUIMenu.qml  FishUIMenuItem.qml  Main.qml  README.md  SessionMenu.qml  UserView.qml  sddm.conf  theme.conf
debian/: changelog  control  copyright
